<resources>
    <string name="app_name">IBeacons</string>
    <string name="lblLoginProntuario">Prontuário</string>
    <string name="lblLoginSenha">Senha</string>
    <string name="HintLoginProntuario">Insira seu Prontuario</string>
    <string name="btnLoginLogar">Acessar</string>
    <string name="lblLoginCadastrar"><u>Criar uma conta</u></string>
    <string name="SwManterConectado">Mantenha-me conectado</string>
    <string name="lblLoginEsqSenha">Esqueci minha senha</string>
    <string name="lblCadastroSenha">Senha</string>
    <string name="lblCadastroConfirmSenha">Confirmar Senha</string>
    <string name="btnCadastroProsseguir">Prosseguir</string>
    <string name="lblCadastroSenhaConfirmacao">As senhas estão diferentes</string>
    <string name="OK">OK</string>
    <string name="Atencao">Atenção</string>
    <string name="DialogUserCadastrado">Este usuário já está cadastrado.</string>
    <string name="lblCadastroNome">Nome</string>
    <string name="lblCadastroSobrenome">Sobrenome</string>
    <string name="hintCadastroData">Data de Nascimento</string>
    <string name="hintCadastroCPF">CPF</string>
    <string name="lblCadastroTelefone">Telefone</string>
    <string name="lblCadastroEmail">Email</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="LoginInvalido">Credenciais de login inválidos.</string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Menu_Deslogar">Deslogar</string>
    <string name="Menu_Config">Configuracoes</string>
    <string name="scanTime5">05 Minutos</string>
    <string name="scanTime10">10 Minutos</string>
    <string name="scanTime15">15 Minutos</string>
    <string name="scanTime20">20 Minutos</string>
    <string name="ScanTimeTitle">Selecione o intervalo de tempo do scanner</string>
    <string name="menu_sync">Sincronizar</string>
    <string name="Chooser_btnPooling">SCAN POOLING</string>
    <string name="Chooser_btnService">Service</string>
    <string name="lblPerfilProntuario">Prontuário:</string>
    <string name="lblPerfilSenha">Senha:</string>
    <string name="Menu_Perfil">Perfil</string>
    <string name="lblPerfilConta">CONTA</string>
    <string name="lblPerfilPerfil">PERFIL</string>
    <string name="lblPerfilNome">Nome:</string>
    <string name="lblPerfilSobrenome">Sobrenome:</string>
    <string name="lblPerfilData">Data de Nascimento:</string>
    <string name="hintPerfilNome">Insira o nome</string>
    <string name="hintPerfilSobrenome">Insira o sobrenome</string>
    <string name="lblPerfilCPF">CPF:</string>
    <string name="hintPerfilCPF">Insira o CPF</string>
    <string name="lblPerfilTelefone">Telefone:</string>
    <string name="hintPerfilTelefone">Insira o Telefone</string>
    <string name="lblPerfilEmail">Email:</string>
    <string name="hintPerfilEmail">Insira o email</string>
    <string name="lblPerfilToken">Token de Concessão:</string>
    <string name="btnPerfilToken">GERAR</string>
    <string name="btnPerfilSalvar">Salvar</string>
    <string name="btn_pooling_limpa">Limpa</string>
</resources>
