<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luispaulo.ibeacons.Activities.ServiceRasp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScanTimeTitle"
        android:textColor="@color/colorAccent"
        android:padding="16dp"
        android:elevation="8dp"
        android:background="@color/colorPrimaryDark"
        android:textSize="22dp" />

    <RadioGroup
        android:id="@+id/grpRadios"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:padding="16dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:checkedButton="@id/rdbCinco"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rdbCinco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/scanTime5" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rdbDez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/scanTime10" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rdbQuinze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/scanTime15" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rdbVinte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/scanTime20" />
    </RadioGroup>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="Start"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Cancel"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/lblServiceRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

</android.support.constraint.ConstraintLayout>
